# ai-news-digest-bot

./: .dockerignore  .env.amvera  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  amvera.yml  pyproject.toml
.github/workflows/: ai-digest.yml
ai_news_digest_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: default_sources.yaml
deploy/systemd/: ai-news-digest.service
digest_bot/: __init__.py  __main__.py  cli.py  config.py  glossary.py  image_selection.py  models.py  scheduler.py  service.py  storage.py
digest_bot/bot/: __init__.py  handlers.py  keyboards.py
digest_bot/collectors/: __init__.py  base.py  rss.py  telegram.py  webpage.py
digest_bot/pipeline/: __init__.py  classify.py  dedup.py  digest_builder.py
digest_bot/summarizers/: __init__.py  base.py  fallback.py  http_compat.py  openai.py
scripts/: install_systemd_service.sh
tasks/: oracle-cloud-migration-plan.md  todo.md
tests/: test_bot_ui.py  test_collectors.py  test_pipeline.py  test_storage.py
