[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-news-digest-bot"
version = "0.1.0"
description = "Personal Telegram bot for AI news, model updates, and coding-focused digests."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.15.0,<4.0.0",
  "apscheduler>=3.10.4,<4.0.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "feedparser>=6.0.11,<7.0.0",
  "httpx>=0.28.1,<1.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "telethon>=1.39.0,<2.0.0",
]

[project.optional-dependencies]
openai = [
  "openai>=1.68.2,<2.0.0",
]

[project.scripts]
ai-news-digest = "digest_bot.cli:main"

[tool.setuptools.packages.find]
include = ["digest_bot*"]
